# hasher

./: .gitattributes  .gitignore  Cargo.toml  README.md  TODO.md  config.toml  config.toml.template  sqlite.md  test.py
docs/: CHANGELOG.md  TODO.md  sqlite.md
src/: README.md  compression.rs  configuration.rs  database.rs  downloader.rs  hasher.rs  lib.rs  main.rs  output.rs  utils.rs
src/commands/: copy.rs  download.rs  hash.rs  mod.rs  verify.rs
