[package]
name = "hasher"
description = "Multithreaded parallel hashing utility"
version = "0.6.0"
edition = "2021"
readme = "README.md"

[dependencies]
crc32fast = "1.4.2"
md2 = "0.10.2"
md4 = "0.10.2"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
blake2 = "0.10.5"
belt-hash = "0.1.0"
whirlpool = "0.10.4"
tiger = "0.2.1"
streebog = "0.10.2"
ripemd = "0.1.3"
fsb = "0.1.3"
sm3 = "0.4.1"
gost94 = "0.10.4"
groestl = "0.10.1"
shabal = "0.4.1"
digest = "0.10.7"
hex = "0.4.3"
log = "0.4.21"
env_logger = "0.11.3"
walkdir = "2.5.0"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
chrono = "0.4.38"
toml = "0.8.14"
clap-verbosity-flag = "2.2.0"

[dependencies.clap]
version = "4.5.6"
features = ["derive"]

[dependencies.tokio]
version = "1.38.0"
features = ["rt-multi-thread", "macros"]

[dependencies.sqlx]
version = "0.7.4"
features = ["sqlite", "runtime-async-std-rustls"]
