[package]
name = "hasher"
description = "Multithreaded parallel hashing utility"
version = "0.8.1"
edition = "2021"
readme = "README.md"

[lib]
name = "hasher"
path = "src/lib.rs"

[[bin]]
name = "hasher"
path = "src/main.rs"

[dependencies]
crc32fast = "1.4.2"
md2 = "0.10.2"
md4 = "0.10.2"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
blake2 = "0.10.6"
belt-hash = "0.1.1"
whirlpool = "0.10.4"
tiger = "0.2.1"
streebog = "0.10.2"
ripemd = "0.1.3"
fsb = "0.1.3"
sm3 = "0.4.2"
gost94 = "0.10.4"
groestl = "0.10.1"
shabal = "0.4.1"
digest = "0.10.7"
hex = "0.4.3"
log = "0.4.22"
env_logger = "0.11.5"
walkdir = "2.5.0"
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.132"
chrono = "0.4.38"
toml = "0.8.19"
clap-verbosity-flag = "2.2.2"

[dependencies.clap]
version = "4.5.20"
features = ["derive"]

[dependencies.tokio]
version = "1.41.1"
features = ["rt-multi-thread", "macros", "time"]

[dependencies.sqlx]
version = "0.8.2"
features = ["sqlite", "runtime-async-std-rustls"]
